--- a/melodic.html
+++ b/melodic.html
@@ -3,7 +3,7 @@
 <head>
 	<title>EDM Finds :: Melodic Music</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="Finds.css">
+	<link rel="stylesheet" href="finds.css">
 </head>
 <body>
 <div id = "wrapper">
