--- a/playlist.html
+++ b/playlist.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="referrer" content="origin">
-	<link rel="stylesheet" href="Finds.css">
+	<link rel="stylesheet" href="finds.css">
 </head>
 <body>
 <div id = "wrapper">
