--- a/playlist.html
+++ b/playlist.html
@@ -96,7 +96,7 @@
 <form method="post" action="https://formspree.io/f/pzaja25@gmail.com">
 <label for="myFName">*First Name:</label> <input type="text" name="myFName" id="myFName" required="required"><br>
 
-<label for="mySong">*Song Title:</label> <input type="text" name="myLName" id="mySong" required="required"><br>
+<label for="mySong">*Song Title:</label> <input type="text" name="mySong" id="mySong" required="required"><br>
 
 <label for="myArtist">*Song Producer:</label> <input type="text" name="myArtist" id="myArtist" required="required"><br>
 
